# Weightfield2

./: .gitignore  .gitmodules  CMakeLists.txt  Canvas_1.root  Carriers.cxx  Carriers.h  Dict.cxx  Field.cxx  Geant_Vin.root  Getymax  Makefile  Makefile_MacOS10.10_root6  Makefile_old  Potentials.cxx  Potentials.h  README.md  Silicon_Vin.root  WFGUI.cxx  WFGUI.h  WFGUI_good.cxx  Weightfield.cxx  arc.ics  dEdz_200_5mu.root  edep_200um_sl5um_diamond_nonpla.root  edep_200um_sl5um_silicon_nonpla.root  grep  params.yml  tb_main.cpp
include/: Carriers.h  Field.h  Potentials.h
src/: Carriers.cxx  Dict.cxx  Field.cxx  Potentials.cxx  WFGUI.cxx
tests/: tb_main.cpp
